[tool.poetry]
name = "curs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.3"
black = "^22.3.0"
keras = "^2.8.0"
tensorflow = "^2.8.0"
jupyter = "^1.0.0"
ipykernel = "^6.13.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
